Tests/dsl/bad/parsing/UnitTestKO103_notaclass.php
<?php
// there is no php class here

function functionUsedForPHPUNitTestingByKaliopMigrationBundle($x)
{
}
